# edgerunner-android

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  conan_android_toolchain.cmake  edgerunner_jni.cpp  model_jni.cpp  model_jni.hpp  native-lib.cpp  tensor_jni.cpp  tensor_jni.hpp
app/src/main/java/com/neuralize/edgerunner/: Edgerunner.kt  MainActivity.kt  Model.java  Model.kt  ModelFactory.java  Span.java  Tensor.java  Tensor.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/neuralize/edgerunner/: ExampleUnitTest.kt
edgerunner/: .gitignore  build.gradle.kts
edgerunner/src/androidTest/java/com/neuralize/edgerunner/: ExampleInstrumentedTest.kt
edgerunner/src/main/: AndroidManifest.xml
edgerunner/src/main/cpp/: CMakeLists.txt  conan_android_toolchain.cmake  conanfile.txt  model_jni.cpp  model_jni.hpp  tensor_jni.cpp  tensor_jni.hpp
edgerunner/src/main/java/com/neuralize/edgerunner/: Model.kt  Tensor.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
imageclassifier/: build.gradle.kts
imageclassifier/src/androidTest/java/com/neuralize/imageclassifier/: ExampleInstrumentedTest.kt
imageclassifier/src/main/: AndroidManifest.xml
imageclassifier/src/main/java/com/neuralize/imageclassifier/: ImageClassifier.kt  MainActivity.kt
imageclassifier/src/main/res/values/: strings.xml  themes.xml
imageclassifier/src/test/java/com/neuralize/imageclassifier/: ExampleUnitTest.kt
(+3 files in other folders)
